# nmea_navsat_driver

./: CMakeLists.txt  README.rst  package.xml
launch/: nmea_driver_testing.launch  nmea_tcp_driver.launch  nmea_trimble_tcp_driver.launch  nmea_ublox_serial_driver.launch
msg/: NavSatGRS.msg  NavSatGST.msg  NavSatInfo.msg  NavSatTrimbleHeading.msg  NavSatTrimbleMovingBase.msg  NavSatUbloxGeoFence.msg  NavSatUbloxPositionVelocityTime.msg  NavSatUbloxPubxPosition.msg  NavSatUbloxRelPos.msg
scripts/: nmea_serial_driver  nmea_socket_driver  nmea_tcp_driver  nmea_topic_driver  nmea_topic_serial_reader
src/libnmea_navsat_driver/: driver.py  parser.py  parser_ubx.py  ubx_messages.yaml
src/libnmea_navsat_driver/nodes/: nmea_serial_driver.py  nmea_tcp_driver.py
testing/: README.rst  config.yaml  test_driver.py
